[Autofill] Allow crowdsourcing of big forms

This CL increases |kMaxFieldsOnTheForm| to 100 in |FormStructure::IsMalformed|.
It allows to crowdsource more forms. See the bug for details. Later the
parameter will be increased even more and will be finchable.

UMA histogram is introduced to monitor the size of forms Autofill has to process.

TODO: Finch-controlled threshold and UKM metric.

Bug: 857454
Change-Id: I50c1382dd36e2c707cd34f1a4f139413d9ea6026
Reviewed-on: https://chromium-review.googlesource.com/1131457
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574150}
Former-commit-id: ca00af373d1cedda85aa03a039fff991f03ccb5d